--- a/style.css
+++ b/style.css
@@ -1,9 +1,25 @@
 html, body {
     width: 100%; height: 100%;
     margin: 0; padding: 0;
+    font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 0;
 }
 
 .game-canvas {
     margin: 0; padding: 0;
+}
+
+.scoreboard {
+    position: absolute;
+    right: 35px; bottom: 25px;
+    font-size: 32px;
+    font-weight: 200;
+    text-align: right;
+    letter-spacing: 4px;
+    color: white;
+}
+
+.score {
+    font-size: 48px;
+    font-weight: 500;
 }
