--- a/style.css
+++ b/style.css
@@ -3,10 +3,26 @@ html, body {
     margin: 0; padding: 0;
     font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
     font-size: 0;
+    background: black;
 }
 
 .game-canvas {
     margin: 0; padding: 0;
+}
+
+.timeboard {
+    position: absolute;
+    left: 35px; bottom: 25px;
+    font-size: 32px;
+    font-weight: 200;
+    text-align: right;
+    letter-spacing: 4px;
+    color: white;
+}
+
+.time {
+    font-size: 48px;
+    font-weight: 500;
 }
 
 .scoreboard {
