--- a/style.css
+++ b/style.css
@@ -10,9 +10,16 @@ html, body {
     margin: 0; padding: 0;
 }
 
+.legend {
+    width: 50px; height: 50px;
+    position: absolute;
+    top: 0;
+    background: red;
+}
+
 .timeboard {
     position: absolute;
-    left: 35px; bottom: 25px;
+    bottom: 25px; left: 35px;
     font-size: 32px;
     font-weight: 200;
     text-align: right;
