--- a/style.css
+++ b/style.css
@@ -11,10 +11,35 @@ html, body {
 }
 
 .legend {
-    width: 50px; height: 50px;
+    width: 100%; height: 100%;
     position: absolute;
     top: 0;
-    background: red;
+    font-size: 24px;
+    letter-spacing: 1px;
+    color: white;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column;
+}
+
+.legend>.item {
+    width: 320px;
+    margin-top: 10px; padding: 20px 0;
+    display: block;
+    text-align: center;
+    background: black;
+    border-radius: 5px;
+}
+.legend>.item.start {
+    margin-top: 20px;
+    font-size: 20px;
+    background: none;
+}
+.legend>.item.start>span {
+    padding: 4px 16px;
+    border: 1px solid white;
 }
 
 .timeboard {
