--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ html, body {
 
 .game-canvas {
     margin: 0; padding: 0;
+    background-position: center;
+    background-size: cover;
 }
 
 .legend {
